Removing unwanted sysouts